// Copyright 2026 Takayoshi Matsuyama
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Filescope namespace (C# 10.0 or later)
namespace GoF.FactoryMethod;

/// <summary>
/// Represents a concrete product in the Factory Method pattern.
/// </summary>
public class ConcreteProduct : IProduct
{
    /// <summary>
    /// Executes the operation defined by the concrete product.
    /// </summary>
    public void ExecuteOperation()
    {
        Console.WriteLine("ConcreteProduct operation executed.");
    }
}
