@startuml gof_factory_method

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Creational #03 - Factory Method

interface Product

class ConcreteProduct

Product <|.. ConcreteProduct

interface Creator {
    +factory_method(): Product
}

class ConcreteCreator {
    +factory_method(): Product
}

Creator <|.. ConcreteCreator
ConcreteCreator ..> ConcreteProduct
@enduml